# pycoco-client

./: README.md  executiondatahandler.py  jacococlient.py  main.py  setup.cfg
src/pycoco_client/: bytefifo.py  datainput.py  executiondatahandler.py  helpers.py  jacococlient.py
