[metadata]
name = pycoco-client-shoaloak
version = 0.0.1
url = https://github.com/shoaloak/pycoco_client
author = Axel Koolhaas
author_email = pypi@axelkoolhaas.com
description = Python client module for Jacoco coverage agent
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
